<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polaris_sensor</name>
  <version>2.0.0</version>
  <description>ROS2 Drover fpr MDI Polars Tracker package</description>
  <maintainer email="jsliu@jhu.edu">Joshua Liu</maintainer>

  <license>CeCILL-C</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>serial</depend>
  <depend>tf2_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
